# lean-ctx

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  VISION.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ci.yml  dep-update.yml  publish-vscode.yml  security-check.yml
aur/lean-ctx/: .SRCINFO  PKGBUILD
docs/comparisons/: vs-naive-rag.md
docs/contracts/: addon-manifest-v1.md  billing-plane-v2.md  capabilities-contract-v1.md  context-candidate-admission-v1.md  delivery-manifest-v1.md  deployment-rehearsal-v1.md  edit-metering-v1.md  frozen-hashes.json  logical-session-presence-v1.md  multi-agent-efficiency-benchmark-v1.md  ocla-bus-event-v1.schema.json  ocla-config-tuning-v2.md  release-key-rotation-v1.md  settlement-evidence-v2.md
docs/guides/: addons.md  aider.md  claude-code.md  codex-cli.md  cursor.md  extensions.md  gemini-cli.md  opencode.md  org-sso-setup.md  pi.md  windsurf.md
docs/integrations/: datadog.md  installation-matrix.md
docs/reference/: 02-daily-use.md  (+6 more)
examples/ocla_consumer/: Cargo.toml  README.md
examples/ocla_consumer/src/: main.rs
memory-bank/: activeContext.md  progress.md
python-sdk/: pyproject.toml
python-sdk/lean_ctx/: __init__.py  client.py  models.py
python-sdk/tests/: test_client.py
rust/: AGENTS.md  CLAUDE.md  Cargo.toml  LOCK_ORDERING.md  deny.toml
scripts/: loc-gate.sh  monitor-agents-r2.sh  start-agents-r2.sh
security/: history-policy-v1.json
ts-sdk/: package.json  tsconfig.json
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
(+516 files in other folders)
