[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lean-ctx-ocla"
version = "0.1.0"
description = "Async Python client for the lean-ctx OCLA Wire API"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
